--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -9,37 +9,55 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    # Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v4
 
+    # Set up Python environment
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: "3.10"
 
+    # Install dependencies
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
         pip install dvc dvc-gs
 
-    - name: Authenticate to Google Cloud
+    # Configure service account credentials for DVC + GCP auth
+    - name: Configure credentials
+      run: |
+        echo "${{ secrets.GCP_SA_KEY }}" > key.json
+        export GOOGLE_APPLICATION_CREDENTIALS="$PWD/key.json"
+
+    # Modify DVC remote to use provided credentials
+    - name: Setup DVC Remote
+      run: |
+        dvc remote modify gcsremote credentialpath "$PWD/key.json"
+
+    # Pull Data + Model via DVC
+    - name: DVC Pull
+      run: |
+        dvc pull
+
+    # Authenticate gcloud for deployment
+    - name: Google Cloud Auth
       uses: google-github-actions/auth@v2
       with:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-    - name: Configure gcloud CLI
+    - name: Configure gcloud
       uses: google-github-actions/setup-gcloud@v2
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-    - name: Pull latest data and model from DVC
-      run: |
-        dvc pull
-
-    - name: Build and push Docker image
+    # Build Docker image and push to GCR
+    - name: Build and push image to GCR
       run: |
         gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/pima-mlops-dvc
 
+    # Deploy to Cloud Run
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy pima-mlops \
